--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/_Layout.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Shared/_Layout.cshtml
@@ -16,14 +16,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Moja prodaja", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole(UWT.Models.Roles.Admin))
+                    {
+                        <li>@Html.ActionLink("Korisnici", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Trgovine", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Stilovi", "Index", "Home")</li>
+                    }
+                    @if (User.IsInRole(UWT.Models.Roles.Merchant))
+                    {
+                        <li>@Html.ActionLink("Moje trgovine", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Moji stilovi", "Index", "Home")</li>
+                    }
+                    <li>@Html.ActionLink("Postavke", "Index", "Home")</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
