--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/Index.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/Index.cshtml
@@ -15,7 +15,7 @@
             [
             @if (Model.HasPassword)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                @Html.ActionLink("Change your password", "ChangePassword", new { }, new { @class = "" })
             }
             else
             {
