--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Membership", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Membership", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -17,12 +17,12 @@
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -48,12 +48,31 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.Label("Profilna slika", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <input type="file" name="image" onchange="readURL(this);" />
+            <img id="img" src="~/Content/default-user-icon.png" alt="Profilna slika" />
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Register"/>
         </div>
     </div>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        // Load chosen image
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#img').attr('src', e.target.result).height(200);
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
 }
