--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/ChangePassword.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UWT.Web.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Promjena lozinke";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,6 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -30,8 +29,9 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+        <div class="col-md-offset-2 col-md-10 btn-group">
+            <input type="submit" value="Promijeni lozinku" class="btn btn-primary" />
+            <a href="@Url.Action("Index")" class="btn btn-default">Odustani</a>
         </div>
     </div>
 }
