--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Login.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using UWT.Web.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Prijava";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -37,13 +37,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                    <div class="col-md-offset-2 col-md-10 btn-group">
+                        <input type="submit" value="Prijava" class="btn btn-primary" />
+                        @Html.ActionLink("Registrirajte se", "Register", new { }, new { @class = "btn btn-default" })
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Registrirajte se", "Register")
-                </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
@@ -51,11 +49,11 @@
             }
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
