--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
@@ -1,15 +1,13 @@
 ﻿@model UWT.Web.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registracija";
+    ViewBag.MainTitle = ViewBag.Title;
+    ViewBag.Subtitle = "Izradite novo korisničko ime";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Membership", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
