Shop adding initialized (layouts, styles)

--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Admin/Users.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Admin/Users.cshtml
@@ -21,7 +21,7 @@
     <tbody>
         <tr ng-repeat="user in users" style="vertical-align: central">
             <td>
-                <img class="img-thumbnail" style="height: 32px" src="~/Content/Images/{{user.ProfileImage}}" alt="Profilna slika" />
+                <img class="img-thumbnail table-image" src="~/Content/Images/{{user.ProfileImage}}" alt="Profilna slika" />
             </td>
             <td>{{user.Email}}</td>
             <td>{{user.Name}}</td>
