--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Admin/CreateLayout.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Admin/CreateLayout.cshtml
@@ -18,7 +18,7 @@
             <div class="form-group">
                 @Html.Label("Učitaj predložak", new { @class = "col-md-3 control-label" })
                 <div class="col-md-9">
-                    <input type="file" required name="layout" />
+                    <input type="file" accept=".cshtml" required name="layout" />
                 </div>
             </div>
             <div class="form-group">
