--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/PageStyles.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/PageStyles.cshtml
@@ -25,15 +25,15 @@
         @foreach (var item in Model) {
             <tr>
                 <td>@item.Name</td>
-                <td><span class="glyphicon glyphicon-star" style="background-color: @item.BackgroundColor; font-size: large"></span></td>
-                <td><img src="@item.BackgroundImage" alt="Background" class="thumbnail table-image" /></td>
-                <td><span class="glyphicon glyphicon-star" style="background-color: @item.ForegroundColor; font-size: large"></span></td>
-                <td><span class="glyphicon glyphicon-star" style="background-color: @item.NavColor; font-size: large"></span></td>
-                <td><img src="@item.NavImage" alt="Background" class="thumbnail table-image" /></td>
-                <td><span class="glyphicon glyphicon-star" style="background-color: @item.SheetColor; font-size: large"></span></td>
-                <td><img src="@item.Logo" alt="Logo" class="thumbnail table-image" /></td>
-                <td><img src="@item.FooterImage" alt="Background" class="thumbnail table-image" /></td>
-                <td><a href="@Url.Action("EditPageStyle", "Merchant", new { Id = item.Id })" class="pull-right btn btn-sm btn-default">Uredi</a></td>
+                <td><span class="form-control" style="background-color: @item.BackgroundColor; font-size: large"></span></td>
+                <td><img src="@item.BackgroundImage.Replace("~", "")" alt="Background" class="thumbnail table-image" /></td>
+                <td><span class="form-control" style="background-color: @item.ForegroundColor; font-size: large"></span></td>
+                <td><span class="form-control" style="background-color: @item.NavColor; font-size: large"></span></td>
+                <td><img src="@item.NavImage.Replace("~", "")" alt="Background" class="thumbnail table-image" /></td>
+                <td><span class="form-control" style="background-color: @item.SheetColor; font-size: large"></span></td>
+                <td><img src="@item.Logo.Replace("~", "")" alt="Logo" class="thumbnail table-image" /></td>
+                <td><img src="@item.FooterImage.Replace("~", "")" alt="Background" class="thumbnail table-image" /></td>
+                <td><a href="@Url.Action("EditPageStyle", "Merchant", new { item.Id })" class="pull-right btn btn-sm btn-default">Uredi</a></td>
             </tr>
         }
     </tbody>
